--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ p span {
 h5 {
   font-weight: bold;
 }
+
 .contain-1,
 .text-1 {
   width: 60%;
@@ -83,7 +84,7 @@ h5 {
   margin-bottom: 10px;
 }
 .list-font-size {
-  margin-left: 40px;
+  /* margin-left: 40px; */
   width: 50%;
   padding: 30px;
   background-color: #e5f9f8;
